# z_tauri_test2

./: LICENSE  eslint.config.js  package-lock.json  package.json  svelte.config.js  tailwind.config.js  tsconfig.json
.devcontainer/: devcontainer.json  setup.sh  svelte.mjs
src/: app.css  app.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
