[package]
name = "z_tauri_test2"
version = "0.1.0"
description = "My tauri application"
authors = ["scirexs"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/scirexs/z_tauri_test2"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.1" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.0.2" }
tauri-plugin-log = "2.0.0-rc"
